# simulador-de-memoria

./: CMakeLists.txt  README.md  config.ini
docs/: Manual del usuario.docx  Manual técnico.docx
src/: Clock.hpp  FIFO.hpp  LRU.hpp  MemoryManager.cpp  MemoryManager.hpp  Process.hpp  ReplacementAlgorithm.hpp  main.cpp
